package main.java.combo;

public interface Bebida {
    String getNome();
    float getValor();
}
