package main.java.combo;

public class Refrigerante implements Bebida {
    public String getNome() { return "Refrigerante"; }
    public float getValor() { return 6.0f; }
}
