package main.java.combo;

public class Suco implements Bebida {
    public String getNome() { return "Suco Natural"; }
    public float getValor() { return 8.0f; }
}
