package main.java.lanche;

public interface Carne {
    String getNomeCarne();
    float getValorCarne();
}
