package main.java.lanche;

public class CarneBoi implements Carne {
    public String getNomeCarne() { return "Carne de Boi"; }
    public float getValorCarne() { return 8.0f; }
}
