package main.java.lanche;

public class CarneFrango implements Carne {
    public String getNomeCarne() { return "Carne de Frango"; }
    public float getValorCarne() { return 6.0f; }
}
