package main.java.lanche;

public interface Hamburguer {
    String getNome();
    float getValor();
}
