package main.java.lanche;

public interface Pao {
    String getNomePao();
    float getValorPao();
}
