package main.java.lanche;

public class PaoComum implements Pao {
    public String getNomePao() { return "Pao Comum"; }
    public float getValorPao() { return 2.0f; }
}
