package main.java.lanche;

public class PaoIntegral implements Pao {
    public String getNomePao() { return "Pao Integral"; }
    public float getValorPao() { return 3.0f; }
}
